k21academy/Kubernetes/deploymnet_hostpath.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.12
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/data1"
          name: myvolume
      volumes:
      - name: myvolume
        hostPath:
          path: /data3
          type: DirectoryOrCreate
