k21academy/Kubernetes/init-containers.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod2
  labels:
    app: myapp
spec:
  containers:
  - name: myapp1
    image: busybox:1.28
    command: ['sh', '-c', 'echo The app is running! && sleep 3600']
