k21academy/Kubernetes/mydb_secret.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: db1
spec:
  selector:
    matchLabels:
      dish: samosa
  replicas:  2
  template:
    metadata:
      labels:
        dish: samosa
    spec:
      containers:
      - name: dbb
        image: mysql
        ports:
        - containerPort: 3306
