k21academy/Kubernetes/pod1.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mypod
spec:
  containers:
  - name: mypod
    image: nginx:1.15.5
    volumeMounts:
    - mountPath: "/data"
      name: volume
  volumes:
    - name: volume
      emptyDir: {}
