k21academy/Kubernetes/pod1_cm1.yaml
kind: Pod
apiVersion: v1
metadata:
  name: mypod2
  namespace: default
spec:
  containers:
  - name: mypod2
    image: nginx:1.15.5
