k21academy/Kubernetes/podaffinity1-preferred-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx2-deployment
  labels:
    app: nginx1
spec:
  replicas: 4 
  selector:
    matchLabels:
      app: nginx1
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx:1.12
        ports:
        - containerPort: 80
      affinity:
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app 
                  operator: In
                  values:
                  - nginx
              topologyKey: kubernetes.io/hostname
