k21academy/Kubernetes/network1.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np2
  namespace: app
spec:
  podSelector:
    matchLabels:
      ns: app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          server: webns
   # - podSelector:
    #    matchLabels:
     #     role: frontend
