k21academy/Kubernetes/networkpolicy_ping.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
spec:
  policyTypes:
  - Ingress
  podSelector:
    matchLabels:
      ns: app
  ingress: 
    from:
    - namespaceSelector: []
