k21academy/Kubernetes/networkpolicy_ping_egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np1
spec:
  policyTypes:
  - Ingress
  - Egress
  podSelector:
    matchLabels:
      env: test
  egress: []
